--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>amaslenn.github.com</h1>
-        <p></p>
+        <p>Domain: {{ page.url | domain_name }}; {{page.url}} - {{ page.full_url }} -</p>
 
 
         <p class="view"><a href="https://github.com/amaslenn">View My GitHub Profile</a></p>
