--- a/404.html
+++ b/404.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>amaslenn.github.com by amaslenn</title>
+    <title>404 by amaslenn</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/pygment_trac.css">
